Fix some spacing bugs on mobile

--- a/_sass/style.sass
+++ b/_sass/style.sass
@@ -757,14 +757,13 @@ footer p
 
 @media only screen and (max-width: 741px)
   main > section h2
-    position: absolute
-    top: 20px
+    margin-bottom: 1em
   .columns
     flex-direction: column
   h1
     font-size: 4em
     max-width: 100% !important
-    margin: 10px auto
+    margin: 10px auto 1em
     letter-spacing: 2px
   h2
     letter-spacing: 2px
